--- a/fragrence.html
+++ b/fragrence.html
@@ -46,7 +46,7 @@
         <li>labdanum</li>
         <li>white musk</li>
     </ul>
-    <img src="bleuDeChanel.png" alt="Bleu de Chanel">
+    <img src="bleuDeChanel.png" width="150" height="150" alt="Bleu de Chanel">
     <hr>
 
     <h2>4. Creed Aventus</h2>
@@ -78,7 +78,7 @@
         <li>oak moss</li>
         <li>musk</li>
     </ul>
-    <img src="aventus.png" alt="Creed Aventus">
+    <img src="aventus.png" width="150" height="150" alt="Creed Aventus">
     <hr>
 
     <h2>3. Dior Homme Intense</h2>
@@ -104,7 +104,7 @@
         <li>virginia cedar</li>
         <li>vetiver</li>
     </ul>
-    <img src="diorHomme.png" alt="Dior Homme">
+    <img src="diorHomme.png" width="150" height="150" alt="Dior Homme">
     <hr>
 
     <h2>2. YSL La Nuit de L'Homme</h2>
@@ -130,7 +130,7 @@
         <li>caraway</li>
         <li>vetiver</li>
     </ul>
-    <img src="YSL.png" alt="YSL La Nuit de L'Homme">
+    <img src="YSL.png" width="150" height="150" alt="YSL La Nuit de L'Homme">
     <hr>
 
     <h2>1. Jean Paul Gaultier Ultra Male </h2>
@@ -162,10 +162,10 @@
         <li>patchouli</li>
         <li>cedar</li>
     </ul>
-    <img src="ultraMale.png" alt="Ultra Male">
+    <img src="ultraMale.png" width="150" height="150" alt="Ultra Male">
     <hr>
     <h2>Don't like my Choices?</h2>
     <p>Check out this video.</p>
-    <iframe src="https://www.youtube.com/watch?v=WaBvkt0p65Y&pp=ygUZdG9wIDUgZnJhZ3JhbmNlcyBmb3IgbWVuIA%3D%3D"></iframe>
+    <iframe src="https://www.youtube.com/watch?v=WaBvkt0p65Y&pp=ygUZdG9wIDUgZnJhZ3JhbmNlcyBmb3IgbWVuIA%3D%3D" width="150" height="150"></iframe>
 </body>
 </html>
