--- a/f1.html
+++ b/f1.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>F1</title>
@@ -15,11 +16,17 @@
         <h1>Guide to Formula 1</h1>
         <hr>
         <h2>What is Formula 1?</h2>
-        <p>A Formula One season consists of a series of races, known as Grands Prix. These races are held on a variety of tracks around the world, including both permanent circuits and temporary street circuits. The races typically last for about two hours and are contested by 20 drivers, representing 10 teams. The drivers compete for points in each race, with the driver with the most points at the end of the season winning the Drivers' Championship. Teams try to develop the best car that abides by the regulation in order to gain the most points and thus win the Contructors' Championship.</p>
+        <p>A Formula One season consists of a series of races, known as Grands Prix. These races are held on a variety
+            of tracks around the world, including both permanent circuits and temporary street circuits. The races
+            typically last for about two hours and are contested by 20 drivers, representing 10 teams. The drivers
+            compete for points in each race, with the driver with the most points at the end of the season winning the
+            Drivers' Championship. Teams try to develop the best car that abides by the regulation in order to gain the
+            most points and thus win the Contructors' Championship.</p>
         <img src="formula1.png" alt="Formula 1" width="300" height="200">
         <hr>
         <h2>Points System</h2>
-        <p>Only the top 10 drivers get points for the race! If you are in the top ten and have the fastest lap you get an additional point.</p>
+        <p>Only the top 10 drivers get points for the race! If you are in the top ten and have the fastest lap you get
+            an additional point.</p>
         <table>
             <tr>
                 <th>Position</th>
@@ -86,7 +93,7 @@
             <dd>- Esteban Ocon</dd>
             <dd>- Pierre Gasly</dd>
             <dt>AlphaTauri</dt>
-            <dd>- Yuki Tsunoda</dd>           
+            <dd>- Yuki Tsunoda</dd>
             <dd>- Daniel Ricardo</dd>
             <dt>Aston Martin</dt>
             <dd>- Fernando Alonso</dd>
@@ -104,15 +111,33 @@
         <hr>
 
         <h2>Saftey Cars</h2>
-        <p>A safety car is a car that is used to slow down the pace of a race when there is a hazard on the track. This can be due to an accident, debris on the track, or bad weather conditions. The safety car is driven by a professional driver and is equipped with flashing lights and a yellow flag to indicate to the drivers that they must slow down. When the safety car is deployed, all of the drivers must line up behind it and remain at a certain distance from it. The drivers are not allowed to overtake each other or race each other while the safety car is on the track. The safety car will remain on the track until the hazard has been cleared and it is safe for the race to resume.</p>
+        <p>A safety car is a car that is used to slow down the pace of a race when there is a hazard on the track. This
+            can be due to an accident, debris on the track, or bad weather conditions. The safety car is driven by a
+            professional driver and is equipped with flashing lights and a yellow flag to indicate to the drivers that
+            they must slow down. When the safety car is deployed, all of the drivers must line up behind it and remain
+            at a certain distance from it. The drivers are not allowed to overtake each other or race each other while
+            the safety car is on the track. The safety car will remain on the track until the hazard has been cleared
+            and it is safe for the race to resume.</p>
         <hr>
 
         <h2>Qualifying</h2>
-        <p>Qualifying is a session that takes place before a Formula 1 race to determine the starting order of the cars. Qualifying is divided into three parts: Q1, Q2, and Q3. In Q1, all 20 cars take to the track and have 18 minutes to set their fastest lap times. The five slowest cars are eliminated at the end of Q1. In Q2, the remaining 15 cars have 15 minutes to set their fastest lap times. The five slowest cars are eliminated at the end of Q2. In Q3, the remaining 10 cars have 12 minutes to set their fastest lap times. The driver with the fastest lap time will start the race on pole position, with the other drivers following in order of their lap times.</p>
+        <p>Qualifying is a session that takes place before a Formula 1 race to determine the starting order of the cars.
+            Qualifying is divided into three parts: Q1, Q2, and Q3. In Q1, all 20 cars take to the track and have 18
+            minutes to set their fastest lap times. The five slowest cars are eliminated at the end of Q1. In Q2, the
+            remaining 15 cars have 15 minutes to set their fastest lap times. The five slowest cars are eliminated at
+            the end of Q2. In Q3, the remaining 10 cars have 12 minutes to set their fastest lap times. The driver with
+            the fastest lap time will start the race on pole position, with the other drivers following in order of
+            their lap times.</p>
         <hr>
 
         <h2>Pit Stops</h2>
-        <p>A pit stop is a pause in a race for a driver to change tires, make repairs, or make mechanical adjustments. Pit stops are an essential part of racing, as they allow drivers to maintain their car's performance and safety throughout a race. Pit stops are typically very quick, with the fastest pit stops taking under two seconds. This is due to the fact that pit crews are highly trained and practice pit stops extensively. Each member of the pit crew has a specific role, and they work together in a choreographed manner to ensure that the pit stop is completed as quickly and safely as possible.</p>
-    </div>  
+        <p>A pit stop is a pause in a race for a driver to change tires, make repairs, or make mechanical adjustments.
+            Pit stops are an essential part of racing, as they allow drivers to maintain their car's performance and
+            safety throughout a race. Pit stops are typically very quick, with the fastest pit stops taking under two
+            seconds. This is due to the fact that pit crews are highly trained and practice pit stops extensively. Each
+            member of the pit crew has a specific role, and they work together in a choreographed manner to ensure that
+            the pit stop is completed as quickly and safely as possible.</p>
+    </div>
 </body>
+
 </html>
