--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+    
 <head>
     <meta charset="UTF-8">
     <title>About Nikhil</title>
@@ -9,7 +10,7 @@
     <ul>
         <li><a href="index.html">Resume</a></li>
         <li><a href="f1.html">Formula 1</a></li>
-        <li><a href="">Fragrence Recommendations</a></li>
+        <li><a href="fragrence.html">Fragrence Recommendations</a></li>
     </ul>
     <div>
         <h1>RESUME</h1>
@@ -67,5 +68,6 @@
         <h2>SKILLS:</h2>
         <p>HTML | Python | Java | JavaScript | TypeScript | CSS | C++ | Node | NextJS | ReactJS | Persuasive Speaking | Public Speaking | Breadboarding | Soldering | Tinker Cad | Multisim | On Shape | Digital Manufacturing </p>
     </div>
-
+</body>
+    
 </html>
