--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
         <hr>
         <h2>EDUCATION</h2>
         <ul>
-            <li><p>Jones College Prep (2020-2024)</p></li>
-            <li><p>Harold Washington Community College (Dual Enrollment)</p></li>    
-            <li><p>Illinois Institute of Technology (Dual Enrollment)</p></li>    
+            <li>Jones College Prep (2020-2024)</li>
+            <li>Harold Washington Community College (Dual Enrollment)</li>    
+            <li>Illinois Institute of Technology (Dual Enrollment)</li>    
         </ul>
 
         <hr>
