--- a/index.html
+++ b/index.html
@@ -13,11 +13,9 @@
   </ul>
   <div>
     <h1>RESUME</h1>
-    <hr>
     <h3>Email: nsavant@hawk.iit.edu</h3>
     <h3>Website: <a href="https://www.nikhilsav.xyz/">Portfolio-WIP</a></h3>
         
-    <hr>
     <h2>EDUCATION</h2>
     <ul>
       <li><p>Jones College Prep (2020-2024)</p></li>
@@ -25,26 +23,27 @@
       <li><p>Illinois Institute of Technology (Dual Enrollment)</p></li>    
     </ul>
 
-    <hr>
     <h2>WORK</h2>
     <h3>Yolk - Barista & Host</h3>
-    <p>May 2023 - Aug 2023<br>Chicago, IL</p>
+    <p>May 2023 - Aug 2023</p>
+    <p>Chicago, IL</p>
     <ul>
       <li>Worked as a barista and host at a breakfast restaurant.</li>
       <li>Worked in a group setting & experienced loads of different personalities.</li>
     </ul>
     <h3>Calculated Genius - Intern</h3>
-    <p>Jun 2023 - Jul 2023<br>Chicago, IL</p>
+    <p>Jun 2023 - Jul 2023</p>
+    <p>Chicago, IL</p>
     <ul>
       <li>Learn about a plethora of fields in STEM like engineering, game development, and cybersecurity.</li>
     </ul>
     <h3>Nando's - Cashier & Host</h3>
-    <p>Jun 2022 - Sep 2022<br>Chicago, IL</p>
+    <p>Jun 2022 - Sep 2022</p>
+    <p>Chicago, IL</p>
     <ul>
       <li>Worked as a Host and Cashier at Nandos. Learned communication skills, working with a team, experienced lots of different personalities.</li>
     </ul>
 
-    <hr>
     <h2>PROJECTS</h2>
     <h3><a href="https://www.nikhilsav.xyz/">Portfolio Website</a></h3>
     <p>Dec 2022 - Current</p>
@@ -68,7 +67,6 @@
       <li>Created a facial recognition app with Python to detect whether the person on the camera is the same as the given image.</li>
     </ul>
 
-    <hr>
     <h2>SKILLS</h2>
     <p>HTML | Python | Java | JavaScript | TypeScript | CSS | C++ | Node | NextJS | ReactJS | Persuasive Speaking | Public Speaking | Breadboarding | Soldering | Tinker Cad | Multisim | On Shape | Digital Manufacturing </p>
   </div>
