--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <body>
   <ul>
     <li><a href="index.html">Resume</a></li>
-    <li><a href="f1.html">Formula 1</a></li>
-    <li><a href="fragrence.html">Fragrence Recommendations</a></li>
+    <li><a href="F1.html">Formula 1</a></li>
+    <li><a href="Fragrence.html">Fragrence Recommendations</a></li>
   </ul>
   <div>
     <h1>RESUME</h1>
