--- a/Fragrence.html
+++ b/Fragrence.html
@@ -47,7 +47,7 @@
       <li>labdanum</li>
       <li>white musk</li>
     </ul>
-    <img src="bleuDeChanel.png" alt="Front shot of Bleu de Chanel cologne by Chanel">
+    <img src="images/bleuDeChanel.png" alt="Front shot of Bleu de Chanel cologne by Chanel">
 
     <h2>4. Creed Aventus</h2>
     <p>Main Accords: </p>
@@ -78,7 +78,7 @@
       <li>oak moss</li>
       <li>musk</li>
     </ul>
-    <img src="aventus.png" alt="Front shot of Creed Aventus Cologne by Creed">
+    <img src="images/aventus.png" alt="Front shot of Creed Aventus Cologne by Creed">
 
     <h2>3. Dior Homme Intense</h2>
     <p>Main Accords: </p>
@@ -103,7 +103,7 @@
       <li>virginia cedar</li>
       <li>vetiver</li>
     </ul>
-    <img src="diorHomme.png" alt="Front shot of Dior Homme Cologne by Dior">
+    <img src="images/diorHomme.png" alt="Front shot of Dior Homme Cologne by Dior">
 
     <h2>2. YSL La Nuit de L'Homme</h2>
     <p>Main Accords: </p>
@@ -128,7 +128,7 @@
       <li>caraway</li>
       <li>vetiver</li>
     </ul>
-    <img src="YSL.png" alt="Front shot of YSL La Nuit de L'Homme Cologne by YSL">
+    <img src="images/YSL.png" alt="Front shot of YSL La Nuit de L'Homme Cologne by YSL">
 
     <h2>1. Jean Paul Gaultier Ultra Male </h2>
     <p>Main Accords: </p>
@@ -159,7 +159,7 @@
       <li>patchouli</li>
       <li>cedar</li>
     </ul>
-    <img src="ultraMale.png" alt="Front shot of Ultra Male Cologne by Jean Paul Gaultier">
+    <img src="images/ultraMale.png" alt="Front shot of Ultra Male Cologne by Jean Paul Gaultier">
     <h2>Don't like my Choices?</h2>
     <p>Check out this video.</p>
     <iframe src="https://www.youtube.com/embed/75URvvtua4Y?si=m1S0vHNpw7t1mVXL"></iframe>
