--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <ul>
     <li><a href="index.html">Resume</a></li>
     <li><a href="F1.html">Formula 1</a></li>
-    <li><a href="Fragrence.html">Fragrence Recommendations</a></li>
+    <li><a href="Fragrence.html">Cologne List</a></li>
   </ul>
   <div>
     <h1>RESUME</h1>
