--- a/fragrence.html
+++ b/fragrence.html
@@ -11,7 +11,7 @@
     <ul>
       <li><a href="index.html">Resume</a></li>
       <li><a href="f1.html">Formula 1</a></li>
-      <li><a href="fragrence.html">Fragrence Recommendations</a></li>
+      <li><a href="fragrence.html">Cologne List</a></li>
     </ul>
 
     <h1>Fragrence Reccomendations</h1>
