--- a/f1.html
+++ b/f1.html
@@ -10,7 +10,7 @@
   <ul>
     <li><a href="index.html">Resume</a></li>
     <li><a href="f1.html">Formula 1</a></li>
-    <li><a href="fragrence.html">Fragrence Recommendations</a></li>
+    <li><a href="fragrence.html">Cologne List</a></li>
   </ul>
   <div>
     <h1>Guide to Formula 1</h1>
