--- a/f1.html
+++ b/f1.html
@@ -7,73 +7,82 @@
 </head>
 
 <body>
-  <ul>
-    <li><a href="index.html">Resume</a></li>
-    <li><a href="f1.html">Formula 1</a></li>
-    <li><a href="fragrence.html">Cologne List</a></li>
-  </ul>
+  <nav>
+    <ul>
+      <li><a href="index.html">Resume</a></li>
+      <li><a href="f1.html">Formula 1</a></li>
+      <li><a href="fragrence.html">Cologne List</a></li>
+    </ul>
+  </nav>
   <div>
-    <h1>Guide to Formula 1</h1>
-    <h2>What is Formula 1?</h2>
-    <p>A Formula One season consists of a series of races, known as Grands Prix. These races are held on a variety of tracks around the world, including both permanent circuits and temporary street circuits. The races typically last for about two hours and are contested by 20 drivers, representing 10 teams. The drivers compete for points in each race, with the driver with the most points at the end of the season winning the Drivers' Championship. Teams try to develop the best car that abides by the regulation in order to gain the most points and thus win the Contructors' Championship.</p>
-    <img src="images/formula1.png" alt="Race start in Formula 1">
-    <h2>Points System</h2>
-    <p>Only the top 10 drivers get points for the race! If you are in the top ten and have the fastest lap you get an additional point.</p>
-    <ol>
-      <li>25</li>
-      <li>18</li>
-      <li>15</li>
-      <li>12</li>
-      <li>10</li>
-      <li>8</li>
-      <li>6</li>
-      <li>4</li>
-      <li>2</li>
-      <li>1</li>
-    </ol>
-
-    <h2>Teams & Drivers</h2>
-    <dl>
-      <dt>Red Bull Racing</dt>
-      <dd>- Max Verstappen</dd>
-      <dd>- Sergio Pérez</dd>
-      <dt>Ferrari</dt>
-      <dd>- Charles Leclerc</dd>
-      <dd>- Carlos Sainz</dd>
-      <dt>Mercedes</dt>
-      <dd>- Lewis Hamilton</dd>
-      <dd>- George Russell</dd>
-      <dt>McLaren</dt>
-      <dd>- Lando Norris</dd>
-      <dd>- Oscar Piastri</dd>
-      <dt>Alpine</dt>
-      <dd>- Esteban Ocon</dd>
-      <dd>- Pierre Gasly</dd>
-      <dt>AlphaTauri</dt>
-      <dd>- Yuki Tsunoda</dd>           
-      <dd>- Daniel Ricardo</dd>
-      <dt>Aston Martin</dt>
-      <dd>- Fernando Alonso</dd>
-      <dd>- Lance Stroll</dd>
-      <dt>Alfa Romeo</dt>
-      <dd>- Valtteri Bottas</dd>
-      <dd>- Guanyu Zhou</dd>
-      <dt>Haas</dt>
-      <dd>- Kevin Magnussen</dd>
-      <dd>- Nico Hülkenberg</dd>
-      <dt>Williams</dt>
-      <dd>- Alex Albon</dd>
-      <dd>- Logan Sargeant</dd>
-    </dl>
-
-    <h2>Saftey Cars</h2>
-    <p>A safety car is a car that is used to slow down the pace of a race when there is a hazard on the track. This can be due to an accident, debris on the track, or bad weather conditions. The safety car is driven by a professional driver and is equipped with flashing lights and a yellow flag to indicate to the drivers that they must slow down. When the safety car is deployed, all of the drivers must line up behind it and remain at a certain distance from it. The drivers are not allowed to overtake each other or race each other while the safety car is on the track. The safety car will remain on the track until the hazard has been cleared and it is safe for the race to resume.</p>
-
-    <h2>Qualifying</h2>
-    <p>Qualifying is a session that takes place before a Formula 1 race to determine the starting order of the cars. Qualifying is divided into three parts: Q1, Q2, and Q3. In Q1, all 20 cars take to the track and have 18 minutes to set their fastest lap times. The five slowest cars are eliminated at the end of Q1. In Q2, the remaining 15 cars have 15 minutes to set their fastest lap times. The five slowest cars are eliminated at the end of Q2. In Q3, the remaining 10 cars have 12 minutes to set their fastest lap times. The driver with the fastest lap time will start the race on pole position, with the other drivers following in order of their lap times.</p>
-
-    <h2>Pit Stops</h2>
-    <p>A pit stop is a pause in a race for a driver to change tires, make repairs, or make mechanical adjustments. Pit stops are an essential part of racing, as they allow drivers to maintain their car's performance and safety throughout a race. Pit stops are typically very quick, with the fastest pit stops taking under two seconds. This is due to the fact that pit crews are highly trained and practice pit stops extensively. Each member of the pit crew has a specific role, and they work together in a choreographed manner to ensure that the pit stop is completed as quickly and safely as possible.</p>
+    <section>
+      <h2>What is Formula 1?</h2>
+      <p>A Formula One season consists of a series of races, known as Grands Prix. These races are held on a variety of tracks around the world, including both permanent circuits and temporary street circuits. The races typically last for about two hours and are contested by 20 drivers, representing 10 teams. The drivers compete for points in each race, with the driver with the most points at the end of the season winning the Drivers' Championship. Teams try to develop the best car that abides by the regulation in order to gain the most points and thus win the Contructors' Championship.</p>
+      <img src="images/formula1.png" alt="Race start in Formula 1">
+    </section>
+    <section>
+      <h2>Points System</h2>
+      <p>Only the top 10 drivers get points for the race! If you are in the top ten and have the fastest lap you get an additional point.</p>
+      <ol>
+        <li>25</li>
+        <li>18</li>
+        <li>15</li>
+        <li>12</li>
+        <li>10</li>
+        <li>8</li>
+        <li>6</li>
+        <li>4</li>
+        <li>2</li>
+        <li>1</li>
+      </ol>
+    </section>
+    <section>
+      <h2>Teams & Drivers</h2>
+      <dl>
+        <dt>Red Bull Racing</dt>
+        <dd>- Max Verstappen</dd>
+        <dd>- Sergio Pérez</dd>
+        <dt>Ferrari</dt>
+        <dd>- Charles Leclerc</dd>
+        <dd>- Carlos Sainz</dd>
+        <dt>Mercedes</dt>
+        <dd>- Lewis Hamilton</dd>
+        <dd>- George Russell</dd>
+        <dt>McLaren</dt>
+        <dd>- Lando Norris</dd>
+        <dd>- Oscar Piastri</dd>
+        <dt>Alpine</dt>
+        <dd>- Esteban Ocon</dd>
+        <dd>- Pierre Gasly</dd>
+        <dt>AlphaTauri</dt>
+        <dd>- Yuki Tsunoda</dd>           
+        <dd>- Daniel Ricardo</dd>
+        <dt>Aston Martin</dt>
+        <dd>- Fernando Alonso</dd>
+        <dd>- Lance Stroll</dd>
+        <dt>Alfa Romeo</dt>
+        <dd>- Valtteri Bottas</dd>
+        <dd>- Guanyu Zhou</dd>
+        <dt>Haas</dt>
+        <dd>- Kevin Magnussen</dd>
+        <dd>- Nico Hülkenberg</dd>
+        <dt>Williams</dt>
+        <dd>- Alex Albon</dd>
+        <dd>- Logan Sargeant</dd>
+      </dl>
+    </section>
+    <section>
+      <h2>Saftey Cars</h2>
+      <p>A safety car is a car that is used to slow down the pace of a race when there is a hazard on the track. This can be due to an accident, debris on the track, or bad weather conditions. The safety car is driven by a professional driver and is equipped with flashing lights and a yellow flag to indicate to the drivers that they must slow down. When the safety car is deployed, all of the drivers must line up behind it and remain at a certain distance from it. The drivers are not allowed to overtake each other or race each other while the safety car is on the track. The safety car will remain on the track until the hazard has been cleared and it is safe for the race to resume.</p>
+    </section>
+    <section>
+      <h2>Qualifying</h2>
+      <p>Qualifying is a session that takes place before a Formula 1 race to determine the starting order of the cars. Qualifying is divided into three parts: Q1, Q2, and Q3. In Q1, all 20 cars take to the track and have 18 minutes to set their fastest lap times. The five slowest cars are eliminated at the end of Q1. In Q2, the remaining 15 cars have 15 minutes to set their fastest lap times. The five slowest cars are eliminated at the end of Q2. In Q3, the remaining 10 cars have 12 minutes to set their fastest lap times. The driver with the fastest lap time will start the race on pole position, with the other drivers following in order of their lap times.</p>
+    </section>
+    <section>
+      <h2>Pit Stops</h2>
+      <p>A pit stop is a pause in a race for a driver to change tires, make repairs, or make mechanical adjustments. Pit stops are an essential part of racing, as they allow drivers to maintain their car's performance and safety throughout a race. Pit stops are typically very quick, with the fastest pit stops taking under two seconds. This is due to the fact that pit crews are highly trained and practice pit stops extensively. Each member of the pit crew has a specific role, and they work together in a choreographed manner to ensure that the pit stop is completed as quickly and safely as possible.</p>
+    </section>
   </div>  
 </body>
 
