--- a/fragrence.html
+++ b/fragrence.html
@@ -7,162 +7,169 @@
 </head>
 
 <body>
+  <ul>
+    <li><a href="index.html">Resume</a></li>
+    <li><a href="f1.html">Formula 1</a></li>
+    <li><a href="fragrence.html">Cologne List</a></li>
+  </ul>
   <div>
-    <ul>
-      <li><a href="index.html">Resume</a></li>
-      <li><a href="f1.html">Formula 1</a></li>
-      <li><a href="fragrence.html">Cologne List</a></li>
-    </ul>
-
-    <h1>Fragrence Reccomendations</h1>
-    <h2>5. Bleu de Chanel</h2> 
-    <p>Main Accords: </p>
-    <ul>
-      <li>citrus</li>
-      <li>woody</li>
-      <li>warm spicy</li>
-      <li>aromatic</li>
-    </ul>
-    <p>Top Notes:</p>
-    <ul>
-      <li>lemon</li>
-      <li>mint</li>
-      <li>pink pepper</li>
-      <li>grapefruit</li>
-    </ul>
-    <p>Middle Notes:</p>
-    <ul>
-      <li>ginger</li>
-      <li>jasmine</li>
-      <li>nutmeg</li>
-      <li>iso e super</li>
-    </ul>
-    <p>Base Notes:</p>
-    <ul>
-      <li>incense</li>
-      <li>vetiver</li>
-      <li>cedar</li>
-      <li>sandalwood</li>
-      <li>patchouli</li>
-      <li>labdanum</li>
-      <li>white musk</li>
-    </ul>
-    <img src="images/bleudechanel.png" alt="Front shot of Bleu de Chanel cologne by Chanel">
-
-    <h2>4. Creed Aventus</h2>
-    <p>Main Accords: </p>
-    <ul>
-      <li>fruity</li>
-        <li>sweet</li>
-        <li>leather</li>
+    <section>
+      <h1>Fragrence Reccomendations</h1>
+      <h2>5. Bleu de Chanel</h2> 
+      <p>Main Accords: </p>
+      <ul>
+        <li>citrus</li>
         <li>woody</li>
-    </ul>
-    <p>Top Notes:</p>
-    <ul>
-      <li>pineapple</li>
-      <li>bergamot</li>
-      <li>black currant</li>
-      <li>apple</li>
-    </ul>
-    <p>Middle Notes:</p>
-    <ul>
-      <li>birch</li>
-      <li>patchouli</li>
-      <li>moroccan jasmine</li>
-      <li>rose</li>
-    </ul>
-    <p>Base Notes:</p>
-    <ul>
-      <li>vanille</li>
-      <li>ambergris</li>
-      <li>oak moss</li>
-      <li>musk</li>
-    </ul>
-    <img src="images/aventus.png" alt="Front shot of Creed Aventus Cologne by Creed">
-
-    <h2>3. Dior Homme Intense</h2>
-    <p>Main Accords: </p>
-    <ul>
-      <li>iris</li>
-      <li>woody</li>
-      <li>powdery</li>
-      <li>earthy</li>
-    </ul>
-    <p>Top Notes:</p>
-    <ul>
-      <li>lavender</li>
-    </ul>
-    <p>Middle Notes:</p>
-    <ul>
-      <li>iris</li>
-      <li>musk mallow</li>
-      <li>pear</li>
-    </ul>
-    <p>Base Notes:</p>
-    <ul>
-      <li>virginia cedar</li>
-      <li>vetiver</li>
-    </ul>
-    <img src="images/diorhomme.png" alt="Front shot of Dior Homme Cologne by Dior">
-
-    <h2>2. YSL La Nuit de L'Homme</h2>
-    <p>Main Accords: </p>
-    <ul>
-      <li>aromatic</li>
-      <li>warm spicy</li>
-      <li>lavender</li>
-      <li>woody</li>
-    </ul>
-    <p>Top Notes:</p>
-    <ul>
-      <li>cardamom</li>
-    </ul>
-    <p>Middle Notes:</p>
-    <ul>
-      <li>lavender</li>
-      <li>virginia cedar</li>
-      <li>bergamot</li>
-    </ul>
-    <p>Base Notes:</p>
-    <ul>
-      <li>caraway</li>
-      <li>vetiver</li>
-    </ul>
-    <img src="images/ysl.png" alt="Front shot of YSL La Nuit de L'Homme Cologne by YSL">
-
-    <h2>1. Jean Paul Gaultier Ultra Male </h2>
-    <p>Main Accords: </p>
-    <ul>
-      <li>vannila</li>
-      <li>fruity</li>
-      <li>sweet</li>
-      <li>aromatic</li>
-    </ul>
-    <p>Top Notes:</p>
-    <ul>
-      <li>pear</li>
-      <li>lavender</li>
-      <li>bergamot</li>
-      <li>mint</li>
-      <li>lemon</li>
-    </ul>
-    <p>Middle Notes:</p>
-    <ul>
-      <li>cinnamon</li>
-      <li>clary sage</li>
-      <li>caraway</li>
-    </ul>
-    <p>Base Notes:</p>
-    <ul>
-      <li>black vanilla husk</li>
-      <li>amber</li>
-      <li>patchouli</li>
-      <li>cedar</li>
-    </ul>
-    <img src="images/ultramale.png" alt="Front shot of Ultra Male Cologne by Jean Paul Gaultier">
-    <h2>Don't like my Choices?</h2>
-    <p>Check out this video.</p>
-    <iframe src="https://www.youtube.com/embed/75URvvtua4Y?si=m1S0vHNpw7t1mVXL"></iframe>
+        <li>warm spicy</li>
+        <li>aromatic</li>
+      </ul>
+      <p>Top Notes:</p>
+      <ul>
+        <li>lemon</li>
+        <li>mint</li>
+        <li>pink pepper</li>
+        <li>grapefruit</li>
+      </ul>
+      <p>Middle Notes:</p>
+      <ul>
+        <li>ginger</li>
+        <li>jasmine</li>
+        <li>nutmeg</li>
+        <li>iso e super</li>
+      </ul>
+      <p>Base Notes:</p>
+      <ul>
+        <li>incense</li>
+        <li>vetiver</li>
+        <li>cedar</li>
+        <li>sandalwood</li>
+        <li>patchouli</li>
+        <li>labdanum</li>
+        <li>white musk</li>
+      </ul>
+      <img src="images/bleudechanel.png" alt="Front shot of Bleu de Chanel cologne by Chanel">
+    </section>
+    <section>
+      <h2>4. Creed Aventus</h2>
+      <p>Main Accords: </p>
+      <ul>
+        <li>fruity</li>
+          <li>sweet</li>
+          <li>leather</li>
+          <li>woody</li>
+      </ul>
+      <p>Top Notes:</p>
+      <ul>
+        <li>pineapple</li>
+        <li>bergamot</li>
+        <li>black currant</li>
+        <li>apple</li>
+      </ul>
+      <p>Middle Notes:</p>
+      <ul>
+        <li>birch</li>
+        <li>patchouli</li>
+        <li>moroccan jasmine</li>
+        <li>rose</li>
+      </ul>
+      <p>Base Notes:</p>
+      <ul>
+        <li>vanille</li>
+        <li>ambergris</li>
+        <li>oak moss</li>
+        <li>musk</li>
+      </ul>
+      <img src="images/aventus.png" alt="Front shot of Creed Aventus Cologne by Creed">
+    </section>
+    <section>
+      <h2>3. Dior Homme Intense</h2>
+      <p>Main Accords: </p>
+      <ul>
+        <li>iris</li>
+        <li>woody</li>
+        <li>powdery</li>
+        <li>earthy</li>
+      </ul>
+      <p>Top Notes:</p>
+      <ul>
+        <li>lavender</li>
+      </ul>
+      <p>Middle Notes:</p>
+      <ul>
+        <li>iris</li>
+        <li>musk mallow</li>
+        <li>pear</li>
+      </ul>
+      <p>Base Notes:</p>
+      <ul>
+        <li>virginia cedar</li>
+        <li>vetiver</li>
+      </ul>
+      <img src="images/diorhomme.png" alt="Front shot of Dior Homme Cologne by Dior">
+    </section>
+    <section>
+      <h2>2. YSL La Nuit de L'Homme</h2>
+      <p>Main Accords: </p>
+      <ul>
+        <li>aromatic</li>
+        <li>warm spicy</li>
+        <li>lavender</li>
+        <li>woody</li>
+      </ul>
+      <p>Top Notes:</p>
+      <ul>
+        <li>cardamom</li>
+      </ul>
+      <p>Middle Notes:</p>
+      <ul>
+        <li>lavender</li>
+        <li>virginia cedar</li>
+        <li>bergamot</li>
+      </ul>
+      <p>Base Notes:</p>
+      <ul>
+        <li>caraway</li>
+        <li>vetiver</li>
+      </ul>
+      <img src="images/ysl.png" alt="Front shot of YSL La Nuit de L'Homme Cologne by YSL">
+    </section>
+    <section>
+      <h2>1. Jean Paul Gaultier Ultra Male </h2>
+      <p>Main Accords: </p>
+      <ul>
+        <li>vannila</li>
+        <li>fruity</li>
+        <li>sweet</li>
+        <li>aromatic</li>
+      </ul>
+      <p>Top Notes:</p>
+      <ul>
+        <li>pear</li>
+        <li>lavender</li>
+        <li>bergamot</li>
+        <li>mint</li>
+        <li>lemon</li>
+      </ul>
+      <p>Middle Notes:</p>
+      <ul>
+        <li>cinnamon</li>
+        <li>clary sage</li>
+        <li>caraway</li>
+      </ul>
+      <p>Base Notes:</p>
+      <ul>
+        <li>black vanilla husk</li>
+        <li>amber</li>
+        <li>patchouli</li>
+        <li>cedar</li>
+      </ul>
+      <img src="images/ultramale.png" alt="Front shot of Ultra Male Cologne by Jean Paul Gaultier">
+    </section>
+    <section>
+      <h2>Don't like my Choices?</h2>
+      <p>Check out this video.</p>
+      <iframe src="https://www.youtube.com/embed/75URvvtua4Y?si=m1S0vHNpw7t1mVXL"></iframe>
+    </section>
   </div>
   </body>
 
