--- a/index.html
+++ b/index.html
@@ -6,69 +6,77 @@
 </head>
 
 <body>
-  <ul>
-    <li><a href="index.html">Resume</a></li>
-    <li><a href="f1.html">Formula 1</a></li>
-    <li><a href="fragrence.html">Cologne List</a></li>
-  </ul>
+  <nav>
+    <ul>
+      <li><a href="index.html">Resume</a></li>
+      <li><a href="f1.html">Formula 1</a></li>
+      <li><a href="fragrence.html">Cologne List</a></li>
+    </ul>
+  </nav>
   <div>
-    <h1>RESUME</h1>
-    <h3>Email: nsavant@hawk.iit.edu</h3>
-    <h3>Website: <a href="https://www.nikhilsav.xyz/">Portfolio-WIP</a></h3>
-        
-    <h2>EDUCATION</h2>
-    <ul>
-      <li><p>Jones College Prep (2020-2024)</p></li>
-      <li><p>Harold Washington Community College (Dual Enrollment)</p></li>    
-      <li><p>Illinois Institute of Technology (Dual Enrollment)</p></li>    
-    </ul>
-
-    <h2>WORK</h2>
-    <h3>Yolk - Barista & Host</h3>
-    <p>May 2023 - Aug 2023</p>
-    <p>Chicago, IL</p>
-    <ul>
-      <li>Worked as a barista and host at a breakfast restaurant.</li>
-      <li>Worked in a group setting & experienced loads of different personalities.</li>
-    </ul>
-    <h3>Calculated Genius - Intern</h3>
-    <p>Jun 2023 - Jul 2023</p>
-    <p>Chicago, IL</p>
-    <ul>
-      <li>Learn about a plethora of fields in STEM like engineering, game development, and cybersecurity.</li>
-    </ul>
-    <h3>Nando's - Cashier & Host</h3>
-    <p>Jun 2022 - Sep 2022</p>
-    <p>Chicago, IL</p>
-    <ul>
-      <li>Worked as a Host and Cashier at Nandos. Learned communication skills, working with a team, experienced lots of different personalities.</li>
-    </ul>
-
-    <h2>PROJECTS</h2>
-    <h3><a href="https://www.nikhilsav.xyz/">Portfolio Website</a></h3>
-    <p>Dec 2022 - Current</p>
-    <ul>
+    <section>
+      <h1>RESUME</h1>
+      <h3>Email: nsavant@hawk.iit.edu</h3>
+      <h3>Website: <a href="https://www.nikhilsav.xyz/">Portfolio-WIP</a></h3>
+    </section>
+    <section>
+      <h2>EDUCATION</h2>
+      <ul>
+        <li><p>Jones College Prep (2020-2024)</p></li>
+        <li><p>Harold Washington Community College (Dual Enrollment)</p></li>    
+        <li><p>Illinois Institute of Technology (Dual Enrollment)</p></li>    
+      </ul>
+    </section>
+    <section>
+      <h2>WORK</h2>
+      <h3>Yolk - Barista & Host</h3>
+      <p>May 2023 - Aug 2023</p>
+      <p>Chicago, IL</p>
+      <ul>
+        <li>Worked as a barista and host at a breakfast restaurant.</li>
+        <li>Worked in a group setting & experienced loads of different personalities.</li>
+      </ul>
+      <h3>Calculated Genius - Intern</h3>
+      <p>Jun 2023 - Jul 2023</p>
+      <p>Chicago, IL</p>
+      <ul>
+        <li>Learn about a plethora of fields in STEM like engineering, game development, and cybersecurity.</li>
+      </ul>
+      <h3>Nando's - Cashier & Host</h3>
+      <p>Jun 2022 - Sep 2022</p>
+      <p>Chicago, IL</p>
+      <ul>
+        <li>Worked as a Host and Cashier at Nandos. Learned communication skills, working with a team, experienced lots of different personalities.</li>
+      </ul>
+    </section>
+    <section>
+      <h2>PROJECTS</h2>
+      <h3><a href="https://www.nikhilsav.xyz/">Portfolio Website</a></h3>
+      <p>Dec 2022 - Current</p>
+      <ul>
         <li>Used HTML, JavaScript, CSS, & TypeScript to develop a website portfolio displaying current accolades & information.</li>
-    </ul>
-    <h3><a href="https://nsavant12.github.io/Guesthouse-Connection-Center/">IMD Guesthouse Connection Center</a></h3>
-    <p>Aug 2023</p>
-    <ul>
-      <li>Used HTML & CSS to develop a website that allows guests at Guesthouse Chicago to connect via a QR code.</li>
-    </ul>
-    <h3><a href="https://github.com/nsavant12/Interactive-Stock-Game-v2">Stock Game</a></h3>
-    <p>Jan 2023</p>
-    <ul>
-      <li>Developed an app using Python and Tkinter with an UI that helped users pick a stock they want to buy.</li>
-      <li>Gives the user ten thousand dollars to start with and provides the user with accurate up to date info about the stock they inputted.</li>
-    </ul>
-    <h3><a href="https://github.com/nsavant12/FacialRecognitionProject">Facial Recognition Project</a></h3>
-    <p>Jul 2022</p>
-    <ul>
-      <li>Created a facial recognition app with Python to detect whether the person on the camera is the same as the given image.</li>
-    </ul>
-
-    <h2>SKILLS</h2>
-    <p>HTML | Python | Java | JavaScript | TypeScript | CSS | C++ | Node | NextJS | ReactJS | Persuasive Speaking | Public Speaking | Breadboarding | Soldering | Tinker Cad | Multisim | On Shape | Digital Manufacturing </p>
+      </ul>
+      <h3><a href="https://nsavant12.github.io/Guesthouse-Connection-Center/">IMD Guesthouse Connection Center</a></h3>
+      <p>Aug 2023</p>
+      <ul>
+        <li>Used HTML & CSS to develop a website that allows guests at Guesthouse Chicago to connect via a QR code.</li>
+      </ul>
+      <h3><a href="https://github.com/nsavant12/Interactive-Stock-Game-v2">Stock Game</a></h3>
+      <p>Jan 2023</p>
+      <ul>
+        <li>Developed an app using Python and Tkinter with an UI that helped users pick a stock they want to buy.</li>
+        <li>Gives the user ten thousand dollars to start with and provides the user with accurate up to date info about the stock they inputted.</li>
+      </ul>
+      <h3><a href="https://github.com/nsavant12/FacialRecognitionProject">Facial Recognition Project</a></h3>
+      <p>Jul 2022</p>
+      <ul>
+        <li>Created a facial recognition app with Python to detect whether the person on the camera is the same as the given image.</li>
+      </ul>
+    </section>
+    <section>
+      <h2>SKILLS</h2>
+      <p>HTML | Python | Java | JavaScript | TypeScript | CSS | C++ | Node | NextJS | ReactJS | Persuasive Speaking | Public Speaking | Breadboarding | Soldering | Tinker Cad | Multisim | On Shape | Digital Manufacturing </p>
+    </section>
   </div>
 </body>
 
