--- a/fragrence.html
+++ b/fragrence.html
@@ -7,11 +7,13 @@
 </head>
 
 <body>
-  <ul>
-    <li><a href="index.html">Resume</a></li>
-    <li><a href="f1.html">Formula 1</a></li>
-    <li><a href="fragrence.html">Cologne List</a></li>
-  </ul>
+  <nav>
+    <ul>
+      <li><a href="index.html">Resume</a></li>
+      <li><a href="f1.html">Formula 1</a></li>
+      <li><a href="fragrence.html">Cologne List</a></li>
+    </ul>
+  </nav>
   <div>
     <section>
       <h1>Fragrence Reccomendations</h1>
