--- a/fragrence.html
+++ b/fragrence.html
@@ -175,7 +175,7 @@
     <section>
       <h2>Don't like my Choices?</h2>
       <p>Check out this video.</p>
-      <iframe src="https://www.youtube.com/embed/75URvvtua4Y?si=m1S0vHNpw7t1mVXL"></iframe>
+      <iframe src="https://www.youtube.com/embed/75URvvtua4Y?si=m1S0vHNpw7t1mVXL" alt="Video Reccomendation of Top Colognes For Men"></iframe>
     </section>
   </div>
   </body>
