--- a/fragrence.html
+++ b/fragrence.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Fragrence Recommendations</title>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
