--- a/f1.html
+++ b/f1.html
@@ -43,39 +43,19 @@
     </section>
     
     <section>
-      <h2>Teams & Drivers</h2>
-      <dl>
-        <dt>Red Bull Racing</dt>
-        <dd>- Max Verstappen</dd>
-        <dd>- Sergio Pérez</dd>
-        <dt>Ferrari</dt>
-        <dd>- Charles Leclerc</dd>
-        <dd>- Carlos Sainz</dd>
-        <dt>Mercedes</dt>
-        <dd>- Lewis Hamilton</dd>
-        <dd>- George Russell</dd>
-        <dt>McLaren</dt>
-        <dd>- Lando Norris</dd>
-        <dd>- Oscar Piastri</dd>
-        <dt>Alpine</dt>
-        <dd>- Esteban Ocon</dd>
-        <dd>- Pierre Gasly</dd>
-        <dt>AlphaTauri</dt>
-        <dd>- Yuki Tsunoda</dd>           
-        <dd>- Daniel Ricardo</dd>
-        <dt>Aston Martin</dt>
-        <dd>- Fernando Alonso</dd>
-        <dd>- Lance Stroll</dd>
-        <dt>Alfa Romeo</dt>
-        <dd>- Valtteri Bottas</dd>
-        <dd>- Guanyu Zhou</dd>
-        <dt>Haas</dt>
-        <dd>- Kevin Magnussen</dd>
-        <dd>- Nico Hülkenberg</dd>
-        <dt>Williams</dt>
-        <dd>- Alex Albon</dd>
-        <dd>- Logan Sargeant</dd>
-      </dl>
+      <h2>Teams</h2>
+      <ul>
+        <li>Red Bull Racing</li>
+        <li>Ferrari</li>
+        <li>Mercedes</li>
+        <li>McLaren</li>
+        <li>Alpine</li>
+        <li>AlphaTauri</li>
+        <li>Aston Martin</li>
+        <li>Alfa Romeo</li>
+        <li>Haas</li>    
+        <li>Williams</li>
+      </ul>
       <hr>
     </section>
     
