--- a/f1.html
+++ b/f1.html
@@ -17,7 +17,7 @@
     </ul>
   </nav>
   <div>
-    <section>
+    <section class="sideBySide">
       <h2>What is Formula 1?</h2>
       <p>A Formula One season consists of a series of races, known as Grands Prix. These races are held on a variety of tracks around the world, including both permanent circuits and temporary street circuits. The races typically last for about two hours and are contested by 20 drivers, representing 10 teams. The drivers compete for points in each race, with the driver with the most points at the end of the season winning the Drivers' Championship. Teams try to develop the best car that abides by the regulation in order to gain the most points and thus win the Contructors' Championship.</p>
       <img src="images/formula1.png" alt="Race start in Formula 1">
