--- a/fragrence.html
+++ b/fragrence.html
@@ -3,9 +3,10 @@
   
 <head>
   <meta charset="UTF-8">
-  <title>Fragrence Recommendations</title>
+  <title>About Nikhil</title>
   <link rel="stylesheet" type="text/css" href="css/normalize.css">
   <link rel="stylesheet" type="text/css" href="css/styles.css">
+  <link rel="stylesheet" href="js/script.js">
 </head>
 
 <body>
@@ -14,6 +15,7 @@
       <li><a href="index.html">Resume</a></li>
       <li><a href="f1.html">Formula 1</a></li>
       <li><a href="fragrence.html">Cologne List</a></li>
+      <li><a href="maps.html" class="navigation">Google Maps</a></li>
     </ul>
   </nav>
   <div>
