--- a/maps.html
+++ b/maps.html
@@ -1,23 +1,25 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Map</title>
-    <meta name="viewport" content="initial-scale=1.0">
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="css/style.css">
-    <script src="js/script.js"></script>
-  </head>
-  <body>
-    <div id="navbar-container" class="links">
-      <ul>
-        <li><a href="index.html">Resume</a></li>
-        <li><a href="f1.html">Formula 1</a></li>
-        <li><a href="fragrence.html">Cologne List</a></li>
-        <li><a href="maps.html" class="navigation">Google Maps</a></li>
-      </ul>
-    </div>
-    <div id="map"></div>
-    <script src="https://maps.googleapis.com/maps/api/js?AIzaSyBM1F-BpX660SBK3-Vw9O9f7AEvTAIH8rI&callback=initMap"
-    async defer></script>
-  </body>
+  
+<head>
+  <meta charset="UTF-8">
+  <title>About Nikhil</title>
+  <link rel="stylesheet" type="text/css" href="css/normalize.css">
+  <link rel="stylesheet" type="text/css" href="css/styles.css">
+  <link rel="stylesheet" href="js/script.js">
+</head>
+
+<body>
+  <nav>
+    <ul>
+      <li><a href="index.html">Resume</a></li>
+      <li><a href="f1.html">Formula 1</a></li>
+      <li><a href="fragrence.html">Cologne List</a></li>
+      <li><a href="maps.html" class="navigation">Google Maps</a></li>
+    </ul>
+  </nav>
+  <div id="map"></div>
+  <script src="https://maps.googleapis.com/maps/api/js?AIzaSyBM1F-BpX660SBK3-Vw9O9f7AEvTAIH8rI&callback=initMap"async defer></script>
+</body>
+
 </html>
