--- a/maps.html
+++ b/maps.html
@@ -15,7 +15,7 @@
       <li><a href="index.html">Resume</a></li>
       <li><a href="f1.html">Formula 1</a></li>
       <li><a href="fragrence.html">Cologne List</a></li>
-      <li><a href="maps.html" class="navigation">Google Maps</a></li>
+      <li><a href="maps.html">Google Maps</a></li>
     </ul>
   </nav>
   <div id="map"></div>
