--- a/f1.html
+++ b/f1.html
@@ -6,7 +6,7 @@
   <title>About Nikhil</title>
   <link rel="stylesheet" type="text/css" href="css/normalize.css">
   <link rel="stylesheet" type="text/css" href="css/styles.css">
-  <link rel="stylesheet" href="js/script.js">
+  <script async src="js/script.js"></script>
 </head>
 
 <body>
