--- a/maps.html
+++ b/maps.html
@@ -3,7 +3,7 @@
   
 <head>
   <meta charset="UTF-8">
-  <title>About Nikhil</title>
+  <title>Maps</title>
   <link rel="stylesheet" type="text/css" href="css/normalize.css">
   <link rel="stylesheet" type="text/css" href="css/styles.css">
   <script async src="js/script.js"></script>
