--- a/maps.html
+++ b/maps.html
@@ -18,6 +18,9 @@
       <li><a href="maps.html">Google Maps</a></li>
     </ul>
   </nav>
+  <section>
+    <p>This is a route from my school to the approximate location of my house.</p>
+  </section>
   <div id="map"></div>
   <script src="https://maps.googleapis.com/maps/api/js?AIzaSyBQ3SmYCvO-wYZw1IQE_Ol2Kvx28T6Ty78&callback=initMap" async defer></script>
 </body>
