--- a/maps.html
+++ b/maps.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   
 <head>
   <meta charset="UTF-8">
@@ -21,7 +21,7 @@
   <div id="map"></div>
   <script src="https://maps.googleapis.com/maps/api/js?AIzaSyBQ3SmYCvO-wYZw1IQE_Ol2Kvx28T6Ty78&callback=initMap" async defer></script>
   <section>
-    <p>This is a route from my school to the approximate location of my house.</p>
+    <h1>This is a route from my school to the approximate location of my house.</h1>
   </section>
 </body>
 
